src/objects/CMMetric__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Total_Hours_Prod_Rate__c</fullName>
        <formula>B_Total_Hours__c / (CurrentsDaysofMonth__c * DailyUtilization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(B) Total Hours-Prod Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Total_Hours__c</fullName>
        <formula>TotalProfessionalHoursB__c + TotalTravelWaitHoursB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(B) Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosedCases__c</fullName>
        <label>Closed Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoveringHoursA__c</fullName>
        <formula>TotalProfessionalHoursCA__c + TotalTravelWaitHoursCA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covering Hours (A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoveringHoursB__c</fullName>
        <formula>TotalProfessionalHoursCB__c + TotalTravelWaitHoursCB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covering Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoveringHoursNurse__c</fullName>
        <formula>TotalProfessionalHoursCNurse__c + TotalTravelWaitHoursCNurse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covering Hours (Nurse)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentMonth__c</fullName>
        <formula>IF(
MetricDate__c  &gt;= TODAY(),
&quot;Yes&quot;,
&quot;No&quot;)</formula>
        <label>Current Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentsDaysofMonth__c</fullName>
        <formula>IF(
		MONTH( MetricDate__c ) = 12,
		DAY(DATE( YEAR( MetricDate__c ), 12, 31 )),
		DAY(DATE( YEAR( MetricDate__c ), MONTH ( MetricDate__c ) + 1, 1 ) - 1) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Days of Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyUtilization__c</fullName>
        <formula>5.70</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>CM Metrics</relationshipLabel>
        <relationshipName>CM_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>56</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>IF(
Employee__r.SF_User__r.IsActive = TRUE,
&quot;Yes&quot;,
&quot;No&quot;)</formula>
        <label>Is Active?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetricDate__c</fullName>
        <label>Metric Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MonthlyUtilizationTarget__c</fullName>
        <formula>CurrentsDaysofMonth__c * DailyUtilization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Prod_Rate__c</fullName>
        <formula>173.33</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Prod Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Prod__c</fullName>
        <formula>(Total_Hours_A__c  / Monthly_Prod_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Prod %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NonProfHoursAProdRate__c</fullName>
        <formula>TotalTravelWaitHoursA__c / (CurrentsDaysofMonth__c * DailyUtilization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Prof. Hours (A) - Prod Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NonProfHoursBProdRate__c</fullName>
        <formula>TotalTravelWaitHoursB__c / (CurrentsDaysofMonth__c * DailyUtilization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Prof. Hours (B) - Prod Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OpenCases__c</fullName>
        <label>Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryHoursA__c</fullName>
        <formula>TotalProfessionalHoursA__c + TotalTravelWaitHoursA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Hours (A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryHoursB__c</fullName>
        <formula>TotalProfessionalHoursB__c + TotalTravelWaitHoursB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryHoursNurse__c</fullName>
        <formula>TotalProfessionalHoursNurse__c + TotalTravelWaitHoursNurse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Hours (Nurse)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProfHoursAProdRate__c</fullName>
        <formula>TotalProfessionalHoursA__c / (CurrentsDaysofMonth__c * DailyUtilization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prof. Hours (A) - Prod Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProfHoursBProdRate__c</fullName>
        <formula>TotalProfessionalHoursB__c / (CurrentsDaysofMonth__c * DailyUtilization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prof. Hours (B) - Prod Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalCases__c</fullName>
        <formula>ClosedCases__c + OpenCases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalExpensesA__c</fullName>
        <label>Total Expenses (A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalExpensesB__c</fullName>
        <label>Total Expenses (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalExpensesCA__c</fullName>
        <label>Total Expenses (C-A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalExpensesCB__c</fullName>
        <label>Total Expenses (C-B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalExpensesCNurse__c</fullName>
        <label>Total Expenses (C-Nurse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalExpensesNurse__c</fullName>
        <label>Total Expenses (Nurse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalHoursAUtilRate__c</fullName>
        <formula>IF(
TotalCases__c &gt; 0,
(Total_Hours_A__c)/ TotalCases__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours (A) - Util Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalHoursA__c</fullName>
        <formula>CoveringHoursA__c + PrimaryHoursA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours (A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalHoursBUtilRate__c</fullName>
        <formula>IF(
TotalCases__c &gt; 0,
(TotalProfessionalHoursB__c + TotalTravelWaitHoursB__c)/ TotalCases__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours (B) - Util Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalHoursB__c</fullName>
        <formula>CoveringHoursB__c + PrimaryHoursB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalHoursNurse__c</fullName>
        <formula>PrimaryHoursNurse__c + CoveringHoursNurse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours (Nurse)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMileageA__c</fullName>
        <label>Total Mileage (A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMileageB__c</fullName>
        <label>Total Mileage (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMileageCA__c</fullName>
        <label>Total Mileage (C-A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMileageCB__c</fullName>
        <label>Total Mileage (C-B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMileageCNurse__c</fullName>
        <label>Total Mileage (C-Nurse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMileageNurse__c</fullName>
        <label>Total Mileage (Nurse)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfessionalHoursA__c</fullName>
        <label>Total Professional Hours (A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfessionalHoursB__c</fullName>
        <label>Total Professional Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfessionalHoursCA__c</fullName>
        <label>Total Professional Hours (C-A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfessionalHoursCB__c</fullName>
        <label>Total Professional Hours (C-B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfessionalHoursCNurse__c</fullName>
        <label>Total Professional Hours (C-Nurse)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfessionalHoursNurse__c</fullName>
        <label>Total Professional Hours (Nurse)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTravelWaitHoursA__c</fullName>
        <label>Total Travel/Wait Hours (A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTravelWaitHoursB__c</fullName>
        <label>Total Travel/Wait Hours (B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTravelWaitHoursCA__c</fullName>
        <label>Total Travel/Wait Hours (C-A)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTravelWaitHoursCB__c</fullName>
        <label>Total Travel/Wait Hours (C-B)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTravelWaitHoursCNurse__c</fullName>
        <label>Total Travel/Wait Hours (C-Nurse)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTravelWaitHoursNurse__c</fullName>
        <label>Total Travel/Wait Hours (Nurse)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_A_Prod_Rate__c</fullName>
        <formula>Total_Hours_A__c  / (CurrentsDaysofMonth__c * DailyUtilization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(A) Total Hours Prod Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Hours_A__c</fullName>
        <formula>TotalProfessionalHoursA__c + TotalTravelWaitHoursA__c + TotalProfessionalHoursCA__c +TotalTravelWaitHoursCA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(A) Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CM Metric</label>
    <nameField>
        <displayFormat>CMMID-{0000000000}</displayFormat>
        <label>CM Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM Metrics</pluralLabel>
    <recordTypes>
        <fullName>AreaMetric</fullName>
        <active>true</active>
        <label>Area Metric</label>
    </recordTypes>
    <recordTypes>
        <fullName>UserMetric</fullName>
        <active>true</active>
        <label>User Metric</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>